feat(astro): started updating content

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@
     >
       Built by{' '}
       <a
-        href="https://github.com/BUE221"
+        href="https://github.com/kylescudder"
         target="_blank"
         rel="noreferrer"
         class="font-medium underline underline-offset-4"
@@ -17,7 +17,7 @@
       . with <span class="text-red-500">❤️</span> using Astro and Tailwind CSS. The
       source code is available on{' '}
       <a
-        href="https://github.com/bue221"
+        href="https://github.com/kylescudder/kylescudder.co.uk"
         target="_blank"
         rel="noreferrer"
         class="font-medium underline underline-offset-4"
