--- a/src/components/sections/AboutMe.astro
+++ b/src/components/sections/AboutMe.astro
@@ -5,7 +5,7 @@ import Card from '../Card.astro'
 <Card colSpan="md:col-span-1" rowSpan="md:row-span-6" title="About me">
   <div class="flex flex-col gap-2">
     <p class="text-sm font-light">
-      Hi, I'm Kyle, a back end software developer from Hastings in England 
+      Hi, I'm Kyle, a back end software developer from Hastings in England
       <br />
       <br />
       My primary languages of choice includes:
@@ -13,16 +13,18 @@ import Card from '../Card.astro'
         <li>C#</li>
         <li>TypeScripts</li>
       </ul>
-      I am most commonly found using the following frameworks:
-      <ul class="list-inside list-disc">
-        <li>.NET</li>
-        <li>React</li>
-        <li>NextJS</li>
-      </ul>
     </p>
     <p class="text-sm font-light">
-      Beyond coding, I'm passionate about tattoo, soccer and traveling. An
-      unusual hobby of mine is play classical music in the guitar or ukulele.
+      I am most commonly found using the following frameworks:
     </p>
+    <ul class="list-inside list-disc">
+      <li>.NET</li>
+      <li>React</li>
+      <li>NextJS</li>
+    </ul>
   </div>
+  <p class="text-sm font-light">
+    Beyond coding, I'm passionate about tattoos, live music and cinema. An unusual
+    hobby of mine is play collecting B movie horror films.
+  </p>
 </Card>
