--- a/src/components/sections/IntroCard.astro
+++ b/src/components/sections/IntroCard.astro
@@ -11,11 +11,11 @@ import { Linkedin, Github, Mail } from 'lucide-react'
       <div class="flex h-full flex-col">
         <h6 class="m-0 text-sm font-light text-gray-500">welcome</h6>
         <p class="m-0 text-xl font-light">
-          Hi, I'm <b class="font-bold">Andrés Camilo Plaza</b>, a software
-          developer, systems engineer and tattoo artist with strong focus on the
-          user experience, animations and micro interactions. I love to create
-          beautiful and functional interfaces, I am passionate about technology
-          and I am always looking for new challenges.
+          Hi, I'm <b class="font-bold">Kyle Scudder</b>, a software
+          developer, tinkerer, and tech enthusiast with strong focus on the
+          making and shipping things, whilst ensuring they are performant or easy to use.
+          I love to create things people actually use, not just another Sass that 6 people will buy into.
+          I am passionate about technology and I am always looking for new challenges.
         </p>
       </div>
       <div class="flex gap-4">
