--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,8 +38,8 @@ import { motion, AnimatePresence } from 'framer-motion'
 </script>
 
 <BaseLayout
-  title="Andrés Plaza - Full Stack Developer"
-  description="Andrés Plaza - Full Stack Developer - Portfolio, Projects, CV, About Me, Contact, Timezone, Now, Experience, Tattoo, Study"
+  title="Kyle Scudder - Back End Developer"
+  description="Kyle Scudder - Back End Developer - Portfolio, Projects, CV, About Me, Contact, Timezone, Now, Experience, Tattoo, Study"
 >
   <div
     slot="loader"
