--- a/src/components/sections/CVCard.astro
+++ b/src/components/sections/CVCard.astro
@@ -16,12 +16,12 @@ const PDF = '/CV English.pdf'
       </figure>
       <div class="mt-4 flex flex-col gap-2">
         <p class="text-sm text-muted-foreground">
-          View and download my resume by clicking on the button below
+          View and download my CV by clicking on the button below
         </p>
         <div class="card-actions mt-2 flex w-full items-center justify-center">
           <a target="_blank" href={PDF}>
             <Button>
-              Download resume
+              Download CV
               <File />
             </Button>
           </a>
