--- a/src/components/sections/MyStack.astro
+++ b/src/components/sections/MyStack.astro
@@ -7,9 +7,9 @@ import Card from '../Card.astro'
     Here's a snapshot of the primary tools and technologies I work with:
   </p>
   <ul class="list-disc pl-5 text-sm font-light">
-    <li><strong>Solidjs</strong></li>
-    <li><strong>JavaScript</strong></li>
-    <li><strong>Node.js</strong></li>
-    <li><strong>React.js</strong></li>
+    <li><strong>.NET</strong></li>
+    <li><strong>C#</strong></li>
+    <li><strong>TypeScript</strong></li>
+    <li><strong>NextJs</strong></li>
   </ul>
 </Card>
