feat(work): updated work content

--- a/src/components/sections/AboutMe.astro
+++ b/src/components/sections/AboutMe.astro
@@ -24,7 +24,7 @@ import Card from '../Card.astro'
     </ul>
   </div>
   <p class="text-sm font-light">
-    Beyond coding, I'm passionate about tattoos, live music and cinema. An unusual
-    hobby of mine is play collecting B movie horror films.
+    Beyond coding, I'm passionate about tattoos, live music and cinema. An
+    unusual hobby of mine is play collecting B movie horror films.
   </p>
 </Card>
