--- a/src/components/sections/IntroCard.astro
+++ b/src/components/sections/IntroCard.astro
@@ -11,11 +11,12 @@ import { Linkedin, Github, Mail } from 'lucide-react'
       <div class="flex h-full flex-col">
         <h6 class="m-0 text-sm font-light text-gray-500">welcome</h6>
         <p class="m-0 text-xl font-light">
-          Hi, I'm <b class="font-bold">Kyle Scudder</b>, a software
-          developer, tinkerer, and tech enthusiast with strong focus on the
-          making and shipping things, whilst ensuring they are performant or easy to use.
-          I love to create things people actually use, not just another Sass that 6 people will buy into.
-          I am passionate about technology and I am always looking for new challenges.
+          Hi, I'm <b class="font-bold">Kyle Scudder</b>, a software developer,
+          tinkerer, and tech enthusiast with strong focus on the making and
+          shipping things, whilst ensuring they are performant or easy to use. I
+          love to create things people actually use, not just another Sass that
+          6 people will buy into. I am passionate about technology and I am
+          always looking for new challenges.
         </p>
       </div>
       <div class="flex gap-4">
