--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,7 @@ import TattooCard from '../components/sections/TattooCard.astro'
 import StudyCard from '../components/sections/StudyCard.astro'
 //
 import { motion, AnimatePresence } from 'framer-motion'
+import LetterboxdCard from '../components/sections/LetterboxdCard.astro'
 ---
 
 <script>
@@ -70,7 +71,7 @@ import { motion, AnimatePresence } from 'framer-motion'
         <p class="mt-2 text-xs">- Jules Verne</p>
       </div>
     </Card>
-    <TattooCard />
+    <LetterboxdCard />
     <StudyCard />
     <!-- <Card colSpan="md:col-span-1" rowSpan="md:row-span-1">
       <p class="text-xs">
