--- a/src/components/sections/LetterboxdCard.astro
+++ b/src/components/sections/LetterboxdCard.astro
@@ -6,8 +6,8 @@ import { LINKS } from '../../lib/constants'
 <Card
   colSpan="md:col-span-1"
   rowSpan="md:row-span-2"
-  title="Instagram tattoo"
-  href={LINKS.instagram}
+  title="Letterboxd"
+  href={LINKS.letterboxd}
 >
   <div class="flex h-full w-full flex-col">
     <div>
@@ -21,7 +21,7 @@ import { LINKS } from '../../lib/constants'
     </div>
     <div>
       <p class="mt-2 text-sm text-muted-foreground">
-        If you want to see my tattoo's, you can follow me on Instagram.
+        If you want to see my letterboxd, you can follow me here.
       </p>
     </div>
   </div>
