--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -26,7 +26,7 @@ const { title, description, ogImage } = Astro.props
 <link
   rel="shortcut icon"
   type="image/svg+xml"
-  href={`${Astro.site}favicon.svg`}
+  href={`${Astro.site}favicon.ico`}
 />
 <title>{title}</title>
 <meta name="title" content={title} />
