feat(footer): updated name in footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,7 @@
         rel="noreferrer"
         class="font-medium underline underline-offset-4"
       >
-        BUE221
+        Kyle Scudder
       </a>
       . with <span class="text-red-500">❤️</span> using Astro and Tailwind CSS. The
       source code is available on{' '}
