feat(projects): switched studies from project because I am not 19

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,11 +8,10 @@ import ContactsCard from '../components/sections/ContactsCard.astro'
 import Now from '../components/sections/Now.astro'
 import CVCard from '../components/sections/CVCard.astro'
 import ExperienceCard from '../components/sections/ExperienceCard.astro'
-import TattooCard from '../components/sections/TattooCard.astro'
-import StudyCard from '../components/sections/StudyCard.astro'
+import ProjectsCard from '../components/sections/ProjectsCard.astro'
+import LetterboxdCard from '../components/sections/LetterboxdCard.astro'
 //
 import { motion, AnimatePresence } from 'framer-motion'
-import LetterboxdCard from '../components/sections/LetterboxdCard.astro'
 ---
 
 <script>
@@ -63,24 +62,7 @@ import LetterboxdCard from '../components/sections/LetterboxdCard.astro'
     <TimeZoneCard />
     <ContactsCard />
     <ExperienceCard />
-    <Card colSpan="md:col-span-1" rowSpan="md:row-span-1">
-      <div class="flex h-full flex-col justify-between">
-        <blockquote class="mt-6 border-l-2 pl-6 italic">
-          “Anything one man can imagine, other men can make real.”
-        </blockquote>
-        <p class="mt-2 text-xs">- Jules Verne</p>
-      </div>
-    </Card>
     <LetterboxdCard />
-    <StudyCard />
-    <!-- <Card colSpan="md:col-span-1" rowSpan="md:row-span-1">
-      <p class="text-xs">
-        © 2023 · Crafted with ♥️ using <a
-          href="https://astro.build/"
-          target="_blank"
-          class="text-red-500">Astro</a
-        > by Gianmarco.
-      </p>
-    </Card> -->
+    <ProjectsCard />
   </main>
 </BaseLayout>
