--- a/src/components/sections/Now.astro
+++ b/src/components/sections/Now.astro
@@ -13,5 +13,5 @@ import Pulse from '../Pulse.astro'
     </div>
     <Pulse />
   </div>
-  <p class="text-xs">Currently working as freelancer</p>
+  <p class="text-xs">Currently learning Rust and ricing my Linux install (arch btw)</p>
 </Card>
