feat(emojis): ENGERLAND, ENGERLAND ENGERLAND NAH NAH

--- a/src/components/sections/ContactsCard.astro
+++ b/src/components/sections/ContactsCard.astro
@@ -13,7 +13,7 @@ import { LINKS } from '../../lib/constants'
     <address class="mt-4 flex flex-col">
       <h2 class="text-gray-500">Contact Details</h2>
       <p>kyle@kylescudder.co.uk</p>
-      <p>🇨🇴 Hastings, East Sussex, United Kingdom 🇨🇴</p>
+      <p>🇬🇧Hastings, East Sussex, United Kingdom 🇬🇧</p>
     </address>
     <div class="mt-4 flex w-fit flex-col">
       <h2 class="text-gray-500">Socials</h2>
