feat(style): updated primary colour and muted text

--- a/src/components/sections/ContactsCard.astro
+++ b/src/components/sections/ContactsCard.astro
@@ -11,12 +11,12 @@ import { LINKS } from '../../lib/constants'
       </h1>
     </header>
     <address class="mt-4 flex flex-col">
-      <h2 class="text-gray-500">Contact Details</h2>
+      <h2 class="text-primary-muted">Contact Details</h2>
       <p>kyle@kylescudder.co.uk</p>
       <p>🇬🇧Hastings, East Sussex, United Kingdom 🇬🇧</p>
     </address>
     <div class="mt-4 flex w-fit flex-col">
-      <h2 class="text-gray-500">Socials</h2>
+      <h2 class="text-primary-muted font-bold">Socials</h2>
       <ul>
         <li>
           <a href={LINKS.linkedin} target="_blank">Linkedin</a>
