--- a/src/components/sections/ProjectsCard.astro
+++ b/src/components/sections/ProjectsCard.astro
@@ -5,7 +5,7 @@ import { PROJECTS } from '../../lib/constants'
 import { Link } from 'contentful/dist/types/types'
 ---
 
-<Card colSpan="md:col-span-1" rowSpan="md:row-span-2">
+<Card colSpan="md:col-span-1" rowSpan="md:row-span-2" title="Projects">
   <div class="mt-2 flex w-full flex-wrap items-center justify-center gap-2">
     {
       PROJECTS.map((project) => (
