--- a/src/components/sections/IntroCard.astro
+++ b/src/components/sections/IntroCard.astro
@@ -9,7 +9,7 @@ import { Linkedin, Github, Mail } from 'lucide-react'
   <div class="flex h-full w-full">
     <div class="flex flex-col justify-between gap-4 md:max-h-[300px]">
       <div class="flex h-full flex-col">
-        <h6 class="m-0 text-sm font-light text-primary-muted">welcome</h6>
+        <h6 class="text-primary-muted m-0 text-sm font-light">welcome</h6>
         <p class="m-0 text-xl font-light">
           Hi, I'm <b class="font-bold">Kyle Scudder</b>, a software developer,
           tinkerer, and tech enthusiast with strong focus on the making and
