--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,7 +12,7 @@
     --popover-foreground: 20 14.3% 4.1%;
     --secondary: 60 4.8% 95.9%;
     --primary: 0 70% 35%;
-    --primary-foreground: 0 0% 98%;;
+    --primary-foreground: 0 0% 98%;
     --secondary-foreground: 24 9.8% 10%;
     --muted: 60 4.8% 95.9%;
     --muted-foreground: 25 5.3% 44.7%;
