--- a/src/components/sections/Now.astro
+++ b/src/components/sections/Now.astro
@@ -8,7 +8,9 @@ import Pulse from '../Pulse.astro'
     <div class="flex flex-col">
       <h2>Now</h2>
       <a href="https://sive.rs/nowff" target="_blank">
-        <span class="cursor-pointer text-xs text-primary-muted">what's that ?</span>
+        <span class="text-primary-muted cursor-pointer text-xs"
+          >what's that ?</span
+        >
       </a>
     </div>
     <Pulse />
