refactor(now): prettier

--- a/src/components/sections/Now.astro
+++ b/src/components/sections/Now.astro
@@ -15,5 +15,7 @@ import Pulse from '../Pulse.astro'
     </div>
     <Pulse />
   </div>
-  <p class="text-xs">Currently learning Rust and ricing my Linux install (arch btw)</p>
+  <p class="text-xs">
+    Currently learning Rust and ricing my Linux install (arch btw)
+  </p>
 </Card>
