fix(dark): text-muted-foreground only applied to dark mode

--- a/src/components/sections/RhiannCard.astro
+++ b/src/components/sections/RhiannCard.astro
@@ -20,7 +20,7 @@ import { LINKS } from '../../lib/constants'
       />
     </div>
     <div>
-      <p class="mt-2 text-sm text-muted-foreground">
+      <p class="mt-2 text-sm dark:text-muted-foreground">
         My fiance is a wonderful graphic designer, it would mean a lot if you
         could check out her amazing work. She also has a card shop!
       </p>
