--- a/src/components/sections/CVCard.astro
+++ b/src/components/sections/CVCard.astro
@@ -15,7 +15,7 @@ const PDF = '/CV.pdf'
         <object data={PDF} type="application/pdf" width="100%"></object>
       </figure>
       <div class="mt-4 flex flex-col gap-2">
-        <p class="text-sm text-muted-foreground">
+        <p class="text-sm dark:text-muted-foreground">
           View and download my CV by clicking on the button below
         </p>
         <div class="card-actions mt-2 flex w-full items-center justify-center">
