--- a/src/components/sections/LetterboxdCard.astro
+++ b/src/components/sections/LetterboxdCard.astro
@@ -20,7 +20,7 @@ import { LINKS } from '../../lib/constants'
       />
     </div>
     <div>
-      <p class="mt-2 text-sm text-muted-foreground">
+      <p class="mt-2 text-sm dark:text-muted-foreground">
         If you want to see my letterboxd, you can follow me here.
       </p>
     </div>
