--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,10 +21,14 @@ import LetterboxdCard from '../components/sections/LetterboxdCard.astro'
     cards,
     { y: ['40%', '0%'], opacity: [0, 1] },
     {
-      type: spring, stiffness: 50, velocity: 100, damping: 10, duration: 0.4, delay: stagger(0.3)
-    }
+      type: spring,
+      stiffness: 50,
+      velocity: 100,
+      damping: 10,
+      duration: 0.4,
+      delay: stagger(0.3),
+    },
   )
-
 </script>
 
 <BaseLayout
