fix(image): updated image alt text

--- a/src/components/sections/LetterboxdCard.astro
+++ b/src/components/sections/LetterboxdCard.astro
@@ -16,7 +16,7 @@ import { LINKS } from '../../lib/constants'
         height="50"
         src="/me_letterboxd.png"
         class="pointer-events-none absolute bottom-[-100px] right-[-110px] z-[-1] max-h-[300px] w-auto select-none opacity-50 md:relative md:bottom-auto md:right-auto md:z-auto md:opacity-100"
-        alt="memoji of andres with a tattoo on his arm"
+        alt="memoji of Kyle doing a chefs kiss"
       />
     </div>
     <div>
