--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import { Github } from 'lucide-react'
+import { IconBrandGithub } from '@tabler/icons-react'
 import { buttonVariants } from '../components/ui/button'
 import { ModeToggle } from '../components/ui/ThemeToggle'
 ---
@@ -37,7 +37,7 @@ import { ModeToggle } from '../components/ui/ThemeToggle'
           rel="noreferrer"
           class={buttonVariants({ variant: 'ghost' })}
         >
-          <Github />
+          <IconBrandGithub />
         </a>
         <ModeToggle transition:persist client:load />
       </nav>
