--- a/src/components/sections/CVCard.astro
+++ b/src/components/sections/CVCard.astro
@@ -1,5 +1,5 @@
 ---
-import { File } from 'lucide-react'
+import { IconFile } from '@tabler/icons-react'
 import Card from '../Card.astro'
 import { Button } from '../ui/button'
 
@@ -22,7 +22,7 @@ const PDF = '/CV.pdf'
           <a target="_blank" href={PDF}>
             <Button>
               Download CV
-              <File />
+              <IconFile />
             </Button>
           </a>
         </div>
