--- a/src/components/sections/IntroCard.astro
+++ b/src/components/sections/IntroCard.astro
@@ -2,7 +2,7 @@
 import Card from '../Card.astro'
 import { Button } from '../ui/button'
 import { LINKS } from '../../lib/constants'
-import { Linkedin, Github, Mail } from 'lucide-react'
+import { IconBrandLinkedin, IconBrandGithub, IconMail } from '@tabler/icons-react';
 ---
 
 <Card colSpan="md:col-span-3" rowSpan="md:row-span-4">
@@ -22,19 +22,19 @@ import { Linkedin, Github, Mail } from 'lucide-react'
       <div class="flex gap-4">
         <a href={LINKS.github} aria-label="github profile" target="_blank">
           <Button aria-label="github profile">
-            <Github />
+            <IconBrandGithub />
             <span class="sr-only">GitHub Profile</span>
           </Button>
         </a>
         <a href={LINKS.linkedin} aria-label="linkeding profile" target="_blank">
           <Button aria-label="linkedin profile">
-            <Linkedin />
+            <IconBrandLinkedin />
             <span class="sr-only">Linkedin Profile</span>
           </Button>
         </a>
         <a href={LINKS.mail} aria-label="mail profile" target="_blank">
           <Button>
-            <Mail />
+            <IconMail />
             <span class="sr-only">Email contact</span>
           </Button>
         </a>
