fix(accessibility): resolved astro suggestions for performance and accessibility

--- a/src/components/sections/RhiannCard.astro
+++ b/src/components/sections/RhiannCard.astro
@@ -1,6 +1,7 @@
 ---
 import Card from '../Card.astro'
 import { LINKS } from '../../lib/constants'
+import { Image } from 'astro:assets';
 ---
 
 <Card
@@ -11,12 +12,13 @@ import { LINKS } from '../../lib/constants'
 >
   <div class="flex h-full w-full flex-col">
     <div>
-      <img
+      <Image
         width="50"
         height="50"
         src="/rhiann.png"
         class="pointer-events-none absolute bottom-[-100px] right-[-110px] z-[-1] max-h-[300px] w-auto select-none opacity-50 md:relative md:bottom-auto md:right-auto md:z-auto md:opacity-100"
         alt="memoji of Rhiann looking cute"
+        loading='eager'
       />
     </div>
     <div>
