--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -32,6 +32,7 @@ import { ModeToggle } from '../components/ui/ThemeToggle'
     <div class="flex flex-1 items-center justify-end space-x-4">
       <nav class="flex items-center space-x-1">
         <a
+          aria-label="GitHub"
           href="https://github.com/kylescudder"
           target="_blank"
           rel="noreferrer"
