--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,5 +1,6 @@
 ---
 import { Card as ShadcnCard } from './ui/card'
+import { Image } from 'astro:assets';
 
 const {
   as: Tag = 'a',
@@ -16,7 +17,7 @@ const {
   <ShadcnCard
     className={`transfor-y-[-40%] align-start perspective-1200 group relative flex-none transform justify-start overflow-hidden shadow-lg transition duration-75 ease-in-out ${href ? 'cursor-pointer hover:border-primary' : ''} `}
   >
-    <img
+    <Image
       src={imagePath}
       alt={altText}
       class="h-48 w-full rounded-2xl rounded-bl-none rounded-br-none object-cover"
