--- a/src/components/sections/IntroCard.astro
+++ b/src/components/sections/IntroCard.astro
@@ -2,6 +2,7 @@
 import Card from '../Card.astro'
 import { Button } from '../ui/button'
 import { LINKS } from '../../lib/constants'
+import { Image } from 'astro:assets';
 import { IconBrandLinkedin, IconBrandGithub, IconMail } from '@tabler/icons-react';
 ---
 
@@ -40,12 +41,13 @@ import { IconBrandLinkedin, IconBrandGithub, IconMail } from '@tabler/icons-reac
         </a>
       </div>
     </div>
-    <img
+    <Image 
       width="300"
       height="300"
       src="/me.png"
       class="pointer-events-none absolute bottom-[-20px] right-[-110px] z-[-1] max-h-[300px] w-auto select-none opacity-50 md:relative md:bottom-auto md:right-auto md:z-auto md:opacity-100"
       alt="memoji of Kyle Scudder"
+      loading='eager'
     />
   </div>
 </Card>
