--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,6 +1,6 @@
 ---
 import { Card as ShadcnCard } from './ui/card'
-import { Image } from 'astro:assets';
+import { Image } from 'astro:assets'
 
 const {
   as: Tag = 'a',
