--- a/src/components/sections/CVCard.astro
+++ b/src/components/sections/CVCard.astro
@@ -12,14 +12,25 @@ const PDF = '/CV.pdf'
       class="card card-compact md:w-112 lg:w-128 w-96 gap-2 border-[oklch(var(--p))] transition-all"
     >
       <figure>
-        <object data={PDF} type="application/pdf" width="100%" aria-label="cv preview" title="cv preview" aria-labelledby="btnDownloadCV"></object>
+        <object
+          data={PDF}
+          type="application/pdf"
+          width="100%"
+          aria-label="cv preview"
+          title="cv preview"
+          aria-labelledby="btnDownloadCV"></object>
       </figure>
       <div class="mt-4 flex flex-col gap-2">
         <p class="text-sm dark:text-muted-foreground">
           View and download my CV by clicking on the button below
         </p>
         <div class="card-actions mt-2 flex w-full items-center justify-center">
-          <a target="_blank" href={PDF} aria-label="Download CV" id="btnDownloadCV">
+          <a
+            target="_blank"
+            href={PDF}
+            aria-label="Download CV"
+            id="btnDownloadCV"
+          >
             <Button>
               Download CV
               <IconFile />
