fix: minor fixes and refactors
Unused file removal etc

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,6 +34,7 @@ import LetterboxdCard from '../components/sections/LetterboxdCard.astro'
 <BaseLayout
   title="Kyle Scudder - Back End Developer"
   description="Kyle Scudder - Back End Developer - Portfolio, Projects, CV, About Me, Contact, Timezone, Now, Experience, Tattoo, Study"
+  ogImage={new URL('me.png', Astro.url)}
 >
   <div
     slot="loader"
