--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -11,7 +11,7 @@ interface Props {
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
 
 if (Astro.props.ogImage === undefined) {
-  Astro.props.ogImage = new URL('View1.png', canonicalURL)
+  Astro.props.ogImage = new URL('me.png', canonicalURL)
 }
 
 const { title, description, ogImage } = Astro.props
