fix(metadata): updated metadata to remove tattoo and study
replaced with letterboxd

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ import LetterboxdCard from '../components/sections/LetterboxdCard.astro'
 
 <BaseLayout
   title="Kyle Scudder - Back End Developer"
-  description="Kyle Scudder - Back End Developer - Portfolio, Projects, CV, About Me, Contact, Timezone, Now, Experience, Tattoo, Study"
+  description="Kyle Scudder - Back End Developer - Portfolio, Projects, CV, About Me, Contact, Timezone, Now, Experience, Letterboxd"
   ogImage={new URL('me.png', Astro.url)}
 >
   <div
