--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -37,6 +37,7 @@ const { title, description, ogImage } = Astro.props
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
 <meta property="og:image" content={ogImage} />
+<meta property="og:site_name" content={title} />
 
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={canonicalURL} />
