--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -15,12 +15,12 @@ const {
 
 <Tag href={href} class={`${className}`} `>
   <ShadcnCard
-    className={`transfor-y-[-40%] align-start perspective-1200 group relative flex-none transform justify-start overflow-hidden shadow-lg transition duration-75 ease-in-out ${href ? 'cursor-pointer hover:border-primary' : ''} `}
+    className={`transfor-y-[-40%] align-start perspective-1200 group relative flex-none transform justify-start overflow-hidden shadow-lg transition duration-75 ease-in-out ${href ? 'hover:border-primary cursor-pointer' : ''} `}
   >
     <Image
       src={imagePath}
       alt={altText}
-      class="h-48 w-full rounded-2xl rounded-bl-none rounded-br-none object-cover"
+      class="h-48 w-full rounded-2xl rounded-br-none rounded-bl-none object-cover"
       loading="eager"
     />
     <div class="flex flex-col gap-y-0.5 px-5 py-4">
