--- a/src/components/sections/CVCard.astro
+++ b/src/components/sections/CVCard.astro
@@ -9,7 +9,7 @@ const PDF = '/CV.pdf'
 <Card colSpan="md:col-span-1" rowSpan="md:row-span-4" title="CV">
   <div class="mt-4 flex w-full justify-center">
     <div
-      class="card card-compact md:w-112 lg:w-128 w-96 gap-2 border-[oklch(var(--p))] transition-all"
+      class="card card-compact w-96 gap-2 border-[oklch(var(--p))] transition-all md:w-112 lg:w-128"
     >
       <figure>
         <object
@@ -21,7 +21,7 @@ const PDF = '/CV.pdf'
           aria-labelledby="btnDownloadCV"></object>
       </figure>
       <div class="mt-4 flex flex-col gap-2">
-        <p class="text-sm dark:text-muted-foreground">
+        <p class="dark:text-muted-foreground text-sm">
           View and download my CV by clicking on the button below
         </p>
         <div class="card-actions mt-2 flex w-full items-center justify-center">
