--- a/src/components/sections/ContactsCard.astro
+++ b/src/components/sections/ContactsCard.astro
@@ -6,7 +6,7 @@ import { LINKS } from '../../lib/constants'
 <Card colSpan="md:col-span-1" rowSpan="md:row-span-4">
   <div class="h-full">
     <header class="flex items-center">
-      <h1 class="text-xl font-bold text-foreground">
+      <h1 class="text-foreground text-xl font-bold">
         Let's start working together!
       </h1>
     </header>
