--- a/src/components/sections/RhiannCard.astro
+++ b/src/components/sections/RhiannCard.astro
@@ -16,13 +16,13 @@ import { Image } from 'astro:assets'
         width="50"
         height="50"
         src="/rhiann.png"
-        class="pointer-events-none absolute bottom-[-100px] right-[-110px] z-[-1] max-h-[300px] w-auto select-none opacity-50 md:relative md:bottom-auto md:right-auto md:z-auto md:opacity-100"
+        class="pointer-events-none absolute right-[-110px] bottom-[-100px] z-[-1] max-h-[300px] w-auto opacity-50 select-none md:relative md:right-auto md:bottom-auto md:z-auto md:opacity-100"
         alt="memoji of Rhiann looking cute"
         loading="eager"
       />
     </div>
     <div>
-      <p class="mt-2 text-sm dark:text-muted-foreground">
+      <p class="dark:text-muted-foreground mt-2 text-sm">
         My fiance is a wonderful graphic designer, it would mean a lot if you
         could check out her amazing work. She also has a card shop!
       </p>
