--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,7 +16,7 @@ const { title, description, ogImage } = Astro.props
   <head>
     <HeadSEO title={title} description={description} ogImage={ogImage} />
   </head>
-  <body class="min-h-screen bg-background font-sans antialiased">
+  <body class="bg-background min-h-screen font-sans antialiased">
     <div class="flex flex-col items-center justify-center">
       <Header />
       <slot />
