--- a/src/layouts/TopLayout.astro
+++ b/src/layouts/TopLayout.astro
@@ -2,7 +2,7 @@
 import Container from '../components/Container.astro'
 ---
 
-<div class="pb-5 pt-36">
+<div class="pt-36 pb-5">
   <Container size="md">
     <slot />
   </Container>
