--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -20,7 +20,7 @@ const {
     <Image
       src={imagePath}
       alt={altText}
-      class="h-48 w-full rounded-2xl rounded-br-none rounded-bl-none object-cover"
+      class="h-48 w-full rounded-2xl rounded-bl-none rounded-br-none object-cover"
       loading="eager"
     />
     <div class="flex flex-col gap-y-0.5 px-5 py-4">
