--- a/src/components/sections/CVCard.astro
+++ b/src/components/sections/CVCard.astro
@@ -9,7 +9,7 @@ const PDF = '/CV.pdf'
 <Card colSpan="md:col-span-1" rowSpan="md:row-span-4" title="CV">
   <div class="mt-4 flex w-full justify-center">
     <div
-      class="card card-compact w-96 gap-2 border-[oklch(var(--p))] transition-all md:w-112 lg:w-128"
+      class="card card-compact md:w-112 lg:w-128 w-96 gap-2 border-[oklch(var(--p))] transition-all"
     >
       <figure>
         <object
