--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ import LetterboxdCard from '../components/sections/LetterboxdCard.astro'
 >
   <div
     slot="loader"
-    class="loader bg-darkslate-700 fixed top-0 right-0 bottom-0 left-0 z-50 flex h-screen w-screen items-center justify-center text-3xl font-black text-neutral-50 uppercase"
+    class="loader bg-darkslate-700 fixed bottom-0 left-0 right-0 top-0 z-50 flex h-screen w-screen items-center justify-center text-3xl font-black uppercase text-neutral-50"
   >
   </div>
   <main
