--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -17,7 +17,7 @@ import { buttonVariants } from '../components/ui/button'
       <h1 class="text-4xl font-extrabold tracking-tight lg:text-5xl">
         Page not found
       </h1>
-      <p class="not-first:mt-6 mb-4 leading-7">
+      <p class="mb-4 leading-7 not-first:mt-6">
         Sorry, we couldn't find the page you're looking for.
       </p>
       <a href="/" rel="noreferrer" class={buttonVariants()}> Go back home</a>
