feat: update site with up to date experience

--- a/src/components/sections/IntroCard.astro
+++ b/src/components/sections/IntroCard.astro
@@ -18,10 +18,10 @@ import {
         <p class="m-0 text-xl font-light">
           Hi, I'm <b class="font-bold">Kyle Scudder</b>, a software developer,
           tinkerer, and tech enthusiast with strong focus on the making and
-          shipping things, whilst ensuring they are performant or easy to use. I
-          love to create things people actually use, not just another Sass that
-          6 people will buy into. I am passionate about technology and I am
-          always looking for new challenges.
+          shipping things, whilst ensuring they are performant and easy to use.
+          I love to create things people actually use, which you can see from my
+          projects. I am passionate about technology and I am always looking for
+          new challenges.
         </p>
       </div>
       <div class="flex gap-4">
